# teamclaw

./: .gitignore  .npmrc  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  build.config.json  opencode.json  package.json  pnpm-lock.yaml  vitest.config.stress.ts
.github/workflows/: ci.yml  release.yml  wecom-notify.yml
crates/teamclaw-seed/: Cargo.toml  Dockerfile  docker-compose.yml
crates/teamclaw-seed/src/: main.rs
docs/superpowers/plans/: 2026-03-19-startup-speed-optimization.md  2026-04-03-system-env-vars.md
docs/superpowers/specs/: 2026-03-19-startup-speed-optimization-design.md  2026-03-29-wecom-gateway-enhancements-design.md  2026-04-03-system-env-vars-design.md
fc/: deploy.sh  index.mjs  s.yaml
scripts/: download-opencode-all.sh  install-mac.sh  tauri-cli.js  update-tauri-config.js  verify-updater-config.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  sentry_utils.rs
src-tauri/src/commands/: clawhub.rs  env_vars.rs  knowledge.rs  mcp.rs  mod.rs  opencode.rs  oss_commands.rs  oss_sync.rs  oss_types.rs  p2p_state.rs  shared_secrets.rs  shared_secrets_crypto.rs  skillssh.rs  spotlight.rs  stt.rs  team.rs  team_p2p.rs  team_unified.rs  team_webdav.rs  updater.rs  version_commands.rs  version_store.rs  version_types.rs  webview.rs
src-tauri/src/commands/cron/: delivery.rs  mod.rs  scheduler.rs  storage.rs  types.rs
src-tauri/src/commands/gateway/: discord.rs  email.rs  feishu.rs  i18n.rs  kook.rs  mod.rs  pending_question.rs  session.rs  wechat.rs  wecom.rs
src-tauri/src/rag/: config.rs  db.rs  embedding.rs  reranker.rs  watcher.rs
src-tauri/src/stt/: audio.rs
src-tauri/src/telemetry/: commands.rs  db.rs  identity.rs  mod.rs
src-tauri/tauri-plugin-mcp-local/src/platform/: unix.rs
tests/regression/: filetree-operations.test.ts  macos-dock-tray.test.ts
tests/stress/: chat-stress.test.ts  stress-config.ts  stress-helpers.ts  stress-reporter.ts  stress-scenarios.ts
