[package]
name = "teamclaw-seed"
version = "0.1.0"
edition = "2021"
description = "Multi-tenant always-on Iroh seed node for TeamClaw P2P team sync"

[[bin]]
name = "teamclaw-seed"
path = "src/main.rs"

[dependencies]
iroh = "0.96"
iroh-blobs = { version = "0.98", features = ["fs-store"] }
iroh-docs = "0.96"
iroh-gossip = "0.96"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-lite = "2"
getrandom = "0.2"
axum = "0.7"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
